SERVER-63013: When health observer returns status failure it will never run again.

(cherry picked from commit 458895d6629e5bc700c2d6f8d84c8f91c58eab94)